# simulationSDR

./: .gitignore  CMakeLists.txt  README.md  plot_sim.py  run_sim.sh  sim.csv  sim1.csv  sim2.csv  sim3.csv  sim4.csv  sim5.csv
.github/workflows/: jetson_ci.yml
include/: c_encoder.h  cencoder.h  transmitter.h
include/simulationSDR/: receiver.h  stats.h
src/: CMakeLists.txt  cencoder.cpp  encoder.cpp  main.cpp  receiver.cpp  transmitter.cpp
tests/: CMakeLists.txt  test_receiver.cpp  test_transmitter.cpp
